<resources>
    <string name="app_name">HKIS</string>
    <string name="splash_input">进 入</string>

    <!-- 页面名称 -->
    <string name="main_navigation_up">上架</string>
    <string name="main_navigation_down">下架</string>
    <string name="main_navigation_change">移仓</string>
    <string name="main_navigation_check">盘点</string>
    <string name="main_navigation_user">我的</string>
<!--上架页面-->
    <string name="up_fragment_tv_hint">请输入单号（非必填）</string>
    <string name="up_fragment_bt_text">立即上架</string>
    <string name="up_condition_text6">入库单</string>
    <string name="down_condition_text">出库单</string>
    <string name="up_fragment_condition_text1">销售出库单</string>
    <string name="up_fragment_condition_text2">采购收货单</string>
    <string name="up_fragment_condition_text3">调拨单</string>
    <string name="up_fragment_condition_text4">领料单</string>
    <string name="up_fragment_condition_other1">其他出库单</string>
    <string name="up_fragment_condition_other2">其他入库单</string>
    <string name="up_fragment_condition_text5">报损单</string>
    <string name="up_fragment_condition_reset">重置</string>
    <string name="up_fragment_condition_confirm">确定</string>
    <string name="condition_inTime_year">年</string>
    <string name="condition_inTime_month">月</string>
    <string name="condition_inTime_day">日</string>

    <string name="up_fragment_condition_desc">上架图片</string>
    <!--登陆页面-->
    <string name="login_bt_login">登录</string>
    <string name="login_tv_setting">设置</string>
    <string name="login_et_name_hint">请输入用户名</string>
    <string name="login_et_pwd_hint">请输入密码</string>
    <!--设置页面-->
    <string name="setting_et_address_hint">IP地址或域名</string>
    <string name="setting_et_port_hint">端口号</string>
    <string name="setting_bt_confirm">确定</string>
    <string name="setting_title">服务器设置</string>
    <!--入库汇总页页面-->
    <string name="sum_tv_title">入库单汇总页面</string>
    <string name="sum_tv_inBill">入库单号</string>
    <string name="sum_tv_whNO">仓库号:</string>
    <string name="sum_tv_billType">单据类型:</string>
    <string name="sum_tv_po">采购订单</string>
    <string name="sum_tv_wh">仓库号</string>
    <string name="sum_tv_docNO">单据号</string>
    <string name="sum_tv_date">到货日期</string>
    <string name="sum_bt_PO">采购订单</string>
    <string name="sum_bt_ll">领料单</string>
    <string name="sum_bt_db">调拨单</string>
    <!--上架物料明细页面-->
    <string name="smd_title">上架物料明细</string>
    <string name="smd_tv_wlh">物料号</string>
    <string name="smd_tv_hasbeen">已上架</string>
    <string name="smd_tv_tostayon">待上架</string>
    <string name="smd_tv_suggest">建议仓位</string>
    <string name="smd_tv_confirm">确定</string>
    <string name="smd_radio_full">全选</string>

    <!--出库汇总页页面-->

    <string name="out_title_deliveryDate">发货日期</string>

    <!--上架信息页面-->
    <string name="up_info_hint_mdcode">请扫描物料条形码</string>
    <string name="up_info_hint_wareHouseNO">请扫描上架仓位</string>
    <string name="up_info_hint_amount">请输入上架数量</string>
    <string name="up_info_hint_boxNum">请输入上架箱数</string>
    <string name="down_sum_tv_title">出库单汇总页面</string>
    <string name="down_md_tv_title">下架物料明细</string>
    <string name="store_info_tv_title">上架信息</string>
    <string name="store_info_tv_wlh">物  料  号</string>
    <string name="store_info_tv_desc">物料描述</string>
    <string name="store_info_tv_inNum">入库数量</string>
    <string name="store_info_tv_unit">物料单位</string>
    <string name="store_info_tv_suggest">建议仓位</string>
    <string name="store_info_tv_qr">物料条码</string>
    <string name="store_info_tv_store">上架仓位</string>
    <string name="store_info_tv_storeNum">上架数量</string>
    <string name="store_info_tv_boxNum">上架箱数</string>
    <string name="store_info_bt_confirm">确认上架</string>


    <!--移仓首页面-->
    <string name="change_et_hint_scan">请扫描源仓位</string>
    <string name="change_bt_change">立即移仓</string>
<string name="tv_batch">批次</string>
    <!--移仓详情页-->
    <string name="out_title_tv">原仓位</string>
    <string name="change_detail_tv_wlh">物料号</string>
    <string name="change_detail_tv_unit">单位：</string>
    <string name="change_detail_tv_kc">库存</string>
    <string name="change_detail_tv_changeNum">转移数量</string>
    <string name="change_detail_tv_target">目的仓位</string>
    <string name="change_pop_tb_cancel">取消</string>
    <string name="change_pop_tb_confirm">确定</string>

    <!--盘点页面-->
    <string name="check_title_tv_title">盘点单汇总</string>
    <string name="check_sum_tv_title">盘点单汇总</string>
    <string name="check_title_deliveryDate">盘点日期</string>
    <string name="pd_et_hint">请输入盘点单号</string>
    <string name="pd_bt_confirm">确认</string>
    <string name="pd_tv_pddh">盘点单号</string>
    <string name="pd_tv_ckh">仓库号</string>
    <string name="pd_title_date">盘点日期</string>
    <string name="pd_title_dj">单据号</string>
    <string name="pd_title_pddhz">盘点单汇总</string>
    <string name="pd_title_position">盘点仓位</string>
    <string name="pd_title_con_storetype">存储类型</string>
    <string name="pd_title_con_storeArea">存储区</string>
    <string name="pd_title_con_uncheck">未盘点</string>
    <string name="pd_titlee_md">盘点物料明细</string>
    <string name="pd_md_zm">账面</string>
    <string name="pd_md_real">实盘数量</string>
    <string name="pd_md_unit">单位</string>
    <string name="pd_md_scan">请扫描物料条码</string>
    <!--下架页面-->
    <string name="down_info_tv_title">下架信息</string>
    <string name="down_bt_down">立即下架</string>
    <string name="down_lb_ckdh">出库单号</string>
    <string name="down_lb_hasbeendown">已下架</string>
    <string name="down_lb_stayoff">待下架</string>
    <string name="down_lb_outNum">出库数量</string>
    <string name="down_lb_position">下架仓位</string>
    <string name="down_lb_downNum">下架数量</string>
    <string name="down_lb_downBox">下架箱数</string>
    <!--我的页面-->
    <string name="user_pwd">修改密码</string>
    <string name="user_about">关于我们</string>
    <string name="user_update">版本升级</string>
    <string name="user_exit">退出登陆</string>
    <string name="user_pwd_old_hint">请输入原密码</string>
    <string name="user_pwd_new_hint">请输入新密码</string>
    <string name="user_pwd_bt_confirm">确定</string>
    <string name="about">华科智能仓储是北京华科众合科技有限公司旗下专注于智能仓发展的品牌，通过移动互联网为更多的企业用户提供优质的标准化的智能存储空间服务</string>
    <string name="about_lb_wx">微信服务号</string>
    <string name="about_wx">智能仓储</string>
    <string name="about_lb_offic">官方网站</string>
    <string name="about_offic">www.cangchu.com</string>
    <string name="about_lb_com">商务合作</string>
    <string name="about_com">hezuo@huake.com</string>
    <string name="about_lb_phone">联系电话</string>
    <string name="about_phone">010-8283-788</string>
    <string name="copyright">Copyright © HuaKe Unite (beijing) Co.,Ltd</string>
    <string name="cn_name">北京华科合众科技有限公司</string>
    <string name="com_app_name">华科智能仓储</string>
    <string name="com_app_version">V2.4.0</string>
    <string name="update_new">检查新版本</string>
</resources>
