<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logo"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/about_about"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="#69798d"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <TextView
        android:id="@+id/about_lb_wx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_lb_wx"
        android:drawableStart="@mipmap/user_about_we"
        android:drawablePadding="5px"
        android:textColor="#313942"
        android:textSize="16sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_about"/>

    <TextView
        android:id="@+id/about_wx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_wx"
        android:textColor="#3ea5f8"
        android:textSize="16sp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/about_lb_wx"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/line1"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:text=""
        android:background="#e5ecf0"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_lb_wx"/>

    <TextView
        android:id="@+id/about_lb_offic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_lb_offic"
        android:drawableStart="@mipmap/user_about_ofic"
        android:drawablePadding="5px"
        android:textColor="#313942"
        android:textSize="16sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>

    <TextView
        android:id="@+id/about_offic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_offic"
        android:textColor="#3ea5f8"
        android:textSize="16sp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/about_lb_offic"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/line2"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:text=""
        android:background="#e5ecf0"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_lb_offic"/>
    <TextView
        android:id="@+id/about_lb_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_lb_com"
        android:drawableStart="@mipmap/user_about_recom"
        android:drawablePadding="5px"
        android:textColor="#313942"
        android:textSize="16sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"/>

    <TextView
        android:id="@+id/about_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_com"
        android:textColor="#3ea5f8"
        android:textSize="16sp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/about_lb_com"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/line3"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:text=""
        android:background="#e5ecf0"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_lb_com"/>
    <TextView
        android:id="@+id/about_lb_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_lb_phone"
        android:drawableStart="@mipmap/user_about_phone"
        android:drawablePadding="5px"
        android:textColor="#313942"
        android:textSize="16sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3"/>

    <TextView
        android:id="@+id/about_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_wx"
        android:textColor="#3ea5f8"
        android:textSize="16sp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/about_lb_phone"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/line4"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:text=""
        android:background="#e5ecf0"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_lb_phone"/>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="12sp"
        android:textColor="#afbfd3"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/com_name"/>
    <TextView
        android:id="@+id/com_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/cn_name"
        android:textSize="12sp"
        android:textColor="#afbfd3"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>