<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#a217232f"
    android:layout_marginTop="20dp"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.Guideline
            android:id="@+id/gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="15dp"/>
            <Button
                android:text="@string/up_condition_text6"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:background="@drawable/bt_bg2"
                android:id="@+id/button5"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/gl" />

            <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/up_fragment_condition_text2"
                android:textSize="14sp"
                android:background="@drawable/bt_bg2"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/button5"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/up_fragment_condition_text3"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toRightOf="@+id/button"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="14sp"
                android:background="@drawable/bt_bg2"
                android:layout_marginStart="15dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/up_fragment_condition_text4"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                android:textSize="14sp"
                android:background="@drawable/bt_bg2"
                android:layout_marginStart="15dp" />
        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/up_fragment_condition_other1"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toRightOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:textSize="14sp"
            android:background="@drawable/bt_bg2"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:text=""
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="#dcdcdc"/>

            <TextView
                android:id="@+id/tv_reset"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#a2b0c7"
                android:text="@string/up_fragment_condition_reset"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/textView3"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="1dp"
                android:background="#dcdcdc"
                android:layout_height="50dp"
                android:text="TextView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintLeft_toRightOf="@+id/tv_reset"
                app:layout_constraintRight_toLeftOf="@+id/tv_confirm"/>

            <TextView
                android:id="@+id/tv_confirm"
                android:text="@string/up_fragment_condition_confirm"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#36adf7"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintLeft_toRightOf="@+id/textView3"
                app:layout_constraintRight_toRightOf="parent"
                />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>