<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/user_update"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/com_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_app_name"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="#2a343a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <TextView
        android:id="@+id/com_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_app_version"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="#2a343a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/com_app_name"/>

    <TextView
        android:id="@+id/com_bt"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:text="@string/update_new"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:background="@drawable/shape_corner_login_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/com_app_version"/>
</android.support.constraint.ConstraintLayout>